carts/odin/null0/null0.odin

// null0 - Odin bindings for the null0 fantasy console
//
// Usage:
//
// ```odin
// package main
//
// import null0 "null0"
//
// @(export)
// load :: proc "c" () {
//     null0.clear(null0.BLUE)
//     null0.draw_circle(100, 100, 50, null0.RED)
// }
// ```
package null0

// handle types
Image :: distinct u32
Font :: distinct u32
Sound :: distinct u32
Tilemap :: distinct u32

// Create a Color from r, g, b, a components
rgba :: proc(r, g, b, a: u8) -> Color {
    return Color{r, g, b, a}
}

// Create an opaque Color from r, g, b components
rgb :: proc(r, g, b: u8) -> Color {
    return rgba(r, g, b, 255)
}


// Sfx parameters.
SfxParams :: struct {
    randSeed: u32,
    waveType: i32,
    attackTime: f32,
    sustainTime: f32,
    sustainPunch: f32,
    decayTime: f32,
    startFrequency: f32,
    minFrequency: f32,
    slide: f32,
    deltaSlide: f32,
    vibratoDepth: f32,
    vibratoSpeed: f32,
    changeAmount: f32,
    changeSpeed: f32,
    squareDuty: f32,
    dutySweep: f32,
    repeatSpeed: f32,
    phaserOffset: f32,
    phaserSweep: f32,
    lpfCutoff: f32,
    lpfCutoffSweep: f32,
    lpfResonance: f32,
    hpfCutoff: f32,
    hpfCutoffSweep: f32,
}

// The 2D size of something (width/height.)
Dimensions :: struct {
    width: i32,
    height: i32,
}

// The 2D position of something (x/y.)
Vector :: struct {
    x: i32,
    y: i32,
}

// The 2D position + size of something (x/y/w/h.)
Rectangle :: struct {
    x: i32,
    y: i32,
    width: i32,
    height: i32,
}

// An RGBA color.
Color :: struct {
    r: u8,
    g: u8,
    b: u8,
    a: u8,
}

// A custom property on a tilemap, layer, object, or tile. Only the member named by `type` is meaningful - a PROP_BOOL is 0/1 in `integer`, and a PROP_COLOR is RGBA bytes in `integer`.
TilemapProp :: struct {
    name: cstring,
    type: TilePropType,
    integer: i32,
    number: f32,
    text: cstring,
}

// An object from an object-layer of a tilemap. This is the map's initial state - carts own whatever they spawn from it.
TilemapObject :: struct {
    id: i32,
    name: cstring,
    type: cstring,
    gid: i32,
    x: f32,
    y: f32,
    width: f32,
    height: f32,
    rotation: f32,
    visible: i32,
}

// Potential image-filtering techniques for scale/etc.
ImageFilter :: enum i32 {
    FILTER_NEARESTNEIGHBOR = 0,
    FILTER_BILINEAR = 1,
    FILTER_SMOOTH = 2,
}

// Represents a Sfx preset type.
SfxPresetType :: enum i32 {
    SFX_COIN = 0,
    SFX_LASER = 1,
    SFX_EXPLOSION = 2,
    SFX_POWERUP = 3,
    SFX_HURT = 4,
    SFX_JUMP = 5,
    SFX_SELECT = 6,
    SFX_SYNTH = 7,
}

// Represents a keyboard key.
Key :: enum i32 {
    KEY_INVALID = 0,
    KEY_SPACE = 32,
    KEY_APOSTROPHE = 39,
    KEY_COMMA = 44,
    KEY_MINUS = 45,
    KEY_PERIOD = 46,
    KEY_SLASH = 47,
    KEY_0 = 48,
    KEY_1 = 49,
    KEY_2 = 50,
    KEY_3 = 51,
    KEY_4 = 52,
    KEY_5 = 53,
    KEY_6 = 54,
    KEY_7 = 55,
    KEY_8 = 56,
    KEY_9 = 57,
    KEY_SEMICOLON = 59,
    KEY_EQUAL = 61,
    KEY_A = 65,
    KEY_B = 66,
    KEY_C = 67,
    KEY_D = 68,
    KEY_E = 69,
    KEY_F = 70,
    KEY_G = 71,
    KEY_H = 72,
    KEY_I = 73,
    KEY_J = 74,
    KEY_K = 75,
    KEY_L = 76,
    KEY_M = 77,
    KEY_N = 78,
    KEY_O = 79,
    KEY_P = 80,
    KEY_Q = 81,
    KEY_R = 82,
    KEY_S = 83,
    KEY_T = 84,
    KEY_U = 85,
    KEY_V = 86,
    KEY_W = 87,
    KEY_X = 88,
    KEY_Y = 89,
    KEY_Z = 90,
    KEY_LEFT_BRACKET = 91,
    KEY_BACKSLASH = 92,
    KEY_RIGHT_BRACKET = 93,
    KEY_GRAVE_ACCENT = 96,
    KEY_WORLD_1 = 161,
    KEY_WORLD_2 = 162,
    KEY_ESCAPE = 256,
    KEY_ENTER = 257,
    KEY_TAB = 258,
    KEY_BACKSPACE = 259,
    KEY_INSERT = 260,
    KEY_DELETE = 261,
    KEY_RIGHT = 262,
    KEY_LEFT = 263,
    KEY_DOWN = 264,
    KEY_UP = 265,
    KEY_PAGE_UP = 266,
    KEY_PAGE_DOWN = 267,
    KEY_HOME = 268,
    KEY_END = 269,
    KEY_CAPS_LOCK = 280,
    KEY_SCROLL_LOCK = 281,
    KEY_NUM_LOCK = 282,
    KEY_PRINT_SCREEN = 283,
    KEY_PAUSE = 284,
    KEY_F1 = 290,
    KEY_F2 = 291,
    KEY_F3 = 292,
    KEY_F4 = 293,
    KEY_F5 = 294,
    KEY_F6 = 295,
    KEY_F7 = 296,
    KEY_F8 = 297,
    KEY_F9 = 298,
    KEY_F10 = 299,
    KEY_F11 = 300,
    KEY_F12 = 301,
    KEY_F13 = 302,
    KEY_F14 = 303,
    KEY_F15 = 304,
    KEY_F16 = 305,
    KEY_F17 = 306,
    KEY_F18 = 307,
    KEY_F19 = 308,
    KEY_F20 = 309,
    KEY_F21 = 310,
    KEY_F22 = 311,
    KEY_F23 = 312,
    KEY_F24 = 313,
    KEY_F25 = 314,
    KEY_KP_0 = 320,
    KEY_KP_1 = 321,
    KEY_KP_2 = 322,
    KEY_KP_3 = 323,
    KEY_KP_4 = 324,
    KEY_KP_5 = 325,
    KEY_KP_6 = 326,
    KEY_KP_7 = 327,
    KEY_KP_8 = 328,
    KEY_KP_9 = 329,
    KEY_KP_DECIMAL = 330,
    KEY_KP_DIVIDE = 331,
    KEY_KP_MULTIPLY = 332,
    KEY_KP_SUBTRACT = 333,
    KEY_KP_ADD = 334,
    KEY_KP_ENTER = 335,
    KEY_KP_EQUAL = 336,
    KEY_LEFT_SHIFT = 340,
    KEY_LEFT_CONTROL = 341,
    KEY_LEFT_ALT = 342,
    KEY_LEFT_SUPER = 343,
    KEY_RIGHT_SHIFT = 344,
    KEY_RIGHT_CONTROL = 345,
    KEY_RIGHT_ALT = 346,
    KEY_RIGHT_SUPER = 347,
    KEY_MENU = 348,
}

// Represents a gamepad button.
GamepadButton :: enum i32 {
    GAMEPAD_BUTTON_UNKNOWN = 0,
    GAMEPAD_BUTTON_UP = 1,
    GAMEPAD_BUTTON_RIGHT = 2,
    GAMEPAD_BUTTON_DOWN = 3,
    GAMEPAD_BUTTON_LEFT = 4,
    GAMEPAD_BUTTON_Y = 5,
    GAMEPAD_BUTTON_B = 6,
    GAMEPAD_BUTTON_A = 7,
    GAMEPAD_BUTTON_X = 8,
    GAMEPAD_BUTTON_LEFT_SHOULDER = 9,
    GAMEPAD_BUTTON_LEFT_TRIGGER = 10,
    GAMEPAD_BUTTON_RIGHT_SHOULDER = 11,
    GAMEPAD_BUTTON_RIGHT_TRIGGER = 12,
    GAMEPAD_BUTTON_SELECT = 13,
    GAMEPAD_BUTTON_MENU = 14,
    GAMEPAD_BUTTON_START = 15,
    GAMEPAD_BUTTON_LEFT_THUMB = 16,
    GAMEPAD_BUTTON_RIGHT_THUMB = 17,
}

// Represents a mouse button.
MouseButton :: enum i32 {
    MOUSE_BUTTON_UNKNOWN = 0,
    MOUSE_BUTTON_LEFT = 1,
    MOUSE_BUTTON_RIGHT = 2,
    MOUSE_BUTTON_MIDDLE = 3,
}

// The kind of a layer in a tilemap.
TileLayerKind :: enum i32 {
    LAYER_NONE = 0,
    LAYER_TILE = 1,
    LAYER_OBJECT = 2,
    LAYER_IMAGE = 3,
    LAYER_GROUP = 4,
}

// The type of a tilemap property's value. Tiled's "file" properties arrive as PROP_STRING.
TilePropType :: enum i32 {
    PROP_NONE = 0,
    PROP_INT = 1,
    PROP_BOOL = 2,
    PROP_FLOAT = 3,
    PROP_STRING = 4,
    PROP_COLOR = 5,
}

// Constants
SCREEN :: Image(0)
SCREEN_WIDTH :: 640
SCREEN_HEIGHT :: 480
FONT_DEFAULT :: Font(0)

// Colors
LIGHTGRAY :: Color{200, 200, 200, 255}
GRAY :: Color{130, 130, 130, 255}
DARKGRAY :: Color{80, 80, 80, 255}
YELLOW :: Color{253, 249, 0, 255}
GOLD :: Color{255, 203, 0, 255}
ORANGE :: Color{255, 161, 0, 255}
PINK :: Color{255, 109, 194, 255}
RED :: Color{230, 41, 55, 255}
MAROON :: Color{190, 33, 55, 255}
GREEN :: Color{0, 228, 48, 255}
LIME :: Color{0, 158, 47, 255}
DARKGREEN :: Color{0, 117, 44, 255}
SKYBLUE :: Color{102, 191, 255, 255}
BLUE :: Color{0, 121, 241, 255}
DARKBLUE :: Color{0, 82, 172, 255}
PURPLE :: Color{200, 122, 255, 255}
VIOLET :: Color{135, 60, 190, 255}
DARKPURPLE :: Color{112, 31, 126, 255}
BEIGE :: Color{211, 176, 131, 255}
BROWN :: Color{127, 106, 79, 255}
DARKBROWN :: Color{76, 63, 47, 255}
WHITE :: Color{255, 255, 255, 255}
BLACK :: Color{0, 0, 0, 255}
BLANK :: Color{0, 0, 0, 0}
MAGENTA :: Color{255, 0, 255, 255}
RAYWHITE :: Color{245, 245, 245, 255}

foreign import null0_api "null0"

@(default_calling_convention="c")
foreign null0_api {

    // COLORS
    // Tint a color with another color.
    color_tint :: proc(color: Color, tint: Color) -> ^Color ---
    // Fade a color.
    color_fade :: proc(color: Color, alpha: f32) -> ^Color ---
    // Change the brightness of a color.
    color_brightness :: proc(color: Color, factor: f32) -> ^Color ---
    // Invert a color.
    color_invert :: proc(color: Color) -> ^Color ---
    // Blend 2 colors together.
    color_alpha_blend :: proc(dst: Color, src: Color) -> ^Color ---
    // Change contrast of a color.
    color_contrast :: proc(color: Color, contrast: f32) -> ^Color ---
    // Interpolate colors.
    color_bilinear_interpolate :: proc(color00: Color, color01: Color, color10: Color, color11: Color, coordinateX: f32, coordinateY: f32) -> ^Color ---
